# icto

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md  build.sh  run.sh  script_build.sh  script_sota.sh
doc/: requirement_management.py
doc/database/: platform_requirements.txt  stakeholder_requirements.txt
doc/stakeholder/: requirement_tree.dot  stakeholder_requirements.txt
mission_defs/: mission_modules.txt
mission_jose/: CMakeLists.txt  component_list.cmake  extract_archives.cmake  mission_config.hpp  mission_jose.cpp  mission_jose.hpp  mission_modules.txt
mission_sample/: CMakeLists.txt  component_list.cmake  extract_archives.cmake  mission_config.hpp  mission_modules.txt  mission_sample.cpp  mission_sample.hpp  targets.cmake  toolchain-arm-linux.cmake  toolchain-x86_64-linux.cmake
modules/: generate_module.sh
modules/john/: README.md
modules/john/obsw/: CMakeLists.txt
modules/john/obsw/platform/: john_msg.hpp  john_msgids.hpp  john_platform.hpp
modules/john/obsw/src/: john_module.cpp  john_module.hpp
modules/marry/: README.md
modules/marry/obsw/: CMakeLists.txt
modules/marry/obsw/platform/: marry_msg.hpp  marry_msgids.hpp  marry_platform.hpp
modules/marry/obsw/src/: marry_module.cpp  marry_module.hpp
modules/sample/: README.md
modules/sample/obsw/: CMakeLists.txt
modules/sample/obsw/platform/: sample_msg.hpp  sample_msgids.hpp  sample_platform.hpp
modules/sample/obsw/src/: sample_module.cpp  sample_module.hpp
